# tax.co

./: .gitignore  .gitmodules  .toodles.yaml  LICENSE.md  Makefile  Makefile.del_rosario  Makefile.old  Modelo Tributario Colombiano (MOTRICO) 1 (version prueba), jbb-annotated.ods  README.md  TODO.org  branches.md  config.json  config.json.model  corporative_imputation.py  datafiles.py  diff_and_lag.sh  egregious-exemptions.txt  enph,match-old-new.org  enph-vars.org  explore.py  fix-format.py  format-errors.md  labor-income.txt  make-all-models.sh  make-rosario.sh  matplotlibrc  motrico-parse.md  motrico-parse.org  overview-lag.sh  overview_lag.sh  queued.org  rules.py  subsample.py  tax.co.org  testing-direct-file-creation  todo.md  todo.org  util.py  vat-pictures.ipynb  vat.py  (+1 more)
.no_younger_than/: README.md
_python-old/: README.md
asking/: david.org  luis.org
bash/: Makefile.del_rosario  csv-files-with-column.sh  diff_and_lag.sh  find,sed,grep.sh  make-all-models.py  make-all-models.sh  make-all-modelswin.sh  make-rosario.sh  rename-enig-2007.sh  rename-enig-2017.sh  run-makefile.py
branches/: branches.md
data/: .gitignore  (+8 more)
haskell/: .ghci  Demo.hs  Main.hs  MarginalTaxRates.hs  MarginalTaxRatesToPython.hs  README.md  args.hs  tax-hask.cabal  test.csv
haskell/Demo/: Demo.hs  Demo.py  README.md
haskell/Demo/Share/: Test.hs
haskell/MarginalTaxRates/: Test.hs
haskell/MarginalTaxRatesToPython/: Test.hs  test-rates.csv
haskell/src/: MarginalTaxRates.hs
haskell/src/Demo/: README.md
haskell/src/Demo/Share/: Test.hs
haskell/src/MarginalTaxRates/: Test.hs
(+537 files in other folders)
