cabal-version:       3.4

name:                tax-hask
version:             0.1.0.0
synopsis:            A tax microsimulation of Colombia
-- description:
homepage:            https://github.com/ofiscal
license:             NONE
-- license-file:
author:              Jeffrey Benjamin Brown
maintainer:          jeffbrown.the@gmail.com
-- copyright:
category:            Data
build-type:          Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    MarginalTaxRates,
    MarginalTaxRates.Test,
    Demo.Demo,
    Demo.Share.Test
  build-depends:
    base,
    HUnit,
    split
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables

executable Main
  import:           warnings
  main-is:          Main.hs
  build-depends:
      base,
      tax-hask
  hs-source-dirs:   app
  default-language: Haskell2010
  other-extensions: ScopedTypeVariables
